language_tests/outputs/invalid/optional_chaining_invalid.out
error: optional unwrap requires an Optional value, found 'Profile'
 -> language_tests/source_files/invalid/optional_chaining_invalid.tr:6:12
	    let _ = profile?.name
	            ^^^^^^^
